<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/blankFragment">

     <fragment
        android:id="@+id/diary_edit"
        android:name="com.example.soul_searching.ui.diary_edit.EditDiary"
        android:label="@string/diary_edit"
        tools:layout="@layout/diary_edit" >
         <action
             android:id="@+id/action_diary_edit_to_diary_item"
             app:destination="@id/diary_item" />
     </fragment>

    <fragment
        android:id="@+id/diary_item"
        android:name="com.example.soul_searching.ui.diary_item.ItemDiary"
        android:label="@string/diary_item"
        tools:layout="@layout/diary_item" >
        <action
            android:id="@+id/action_diary_item_to_set_question"
            app:destination="@id/set_question" />
    </fragment>

    <fragment
        android:id="@+id/set_question"
        android:name="com.example.soul_searching.ui.set_question.SetQuestion"
        android:label="@string/set_question"
        tools:layout="@layout/set_question" >
        <action
            android:id="@+id/action_set_question_to_diary_safety"
            app:destination="@id/diary_safety" />
    </fragment>

    <fragment
        android:id="@+id/diary_safety"
        android:name="com.example.soul_searching.ui.diary_safety.DiarySafety"
        android:label="@string/diary_safety"
        tools:layout="@layout/diary_safety" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.example.soul_searching.ui.HomePage"
        android:label="fragment_blank2"
        tools:layout="@layout/homepage" >
        <action
            android:id="@+id/action_blankFragment_to_diary_edit2"
            app:destination="@id/diary_edit" />
        <action
            android:id="@+id/action_blankFragment_to_homePageBottom"
            app:destination="@id/homePageBottom" />
    </fragment>
    <fragment
        android:id="@+id/homePageBottom"
        android:name="com.example.soul_searching.HomePageBottom"
        android:label="home_page_bottom"
        tools:layout="@layout/home_page_bottom" />


</navigation>