<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <android.support.design.widget.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" >-->


    <!--问题部分采用线性垂直布局-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--问题1-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/diary_title_time"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textColor="@color/black" />

            <!--回答一-->
            <EditText
                android:id="@+id/A1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--问题2-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_title_weather"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textColor="@color/black" />

            <!--回答一-->
            <EditText
                android:id="@+id/A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>



    <!--内容编辑区-->
    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:textSize="18sp"
        android:hint="@string/empty_diary_content"
        android:maxLines="15"/>
</LinearLayout>
